Regression: Child hair particles set to "Interpolated" causes jittering when the based vertex changes position #112448

Closed
opened 2023-09-16 15:07:18 +02:00 by andy-joy · 11 comments

System Information
Operating system:win10
Graphics card:RTX3060ti

Blender Version
Broken: c8c6f62cf3a3,fca8df9415
Broken: 3.5
Worked: 3.4

Caused by d20f992322

Short description of error
Child hair particles set to "Interpolated" causes jittering when the based vertex changes position
This problem seems to have been solved before,in #63534 and #56408

Exact steps for others to reproduce the error
Open the file and render animation

**System Information** Operating system:win10 Graphics card:RTX3060ti **Blender Version** Broken: c8c6f62cf3a3,fca8df9415 Broken: 3.5 Worked: 3.4 Caused by d20f9923224d2637374dd4390ae84c5041e3f9d3 **Short description of error** Child hair particles set to "Interpolated" causes jittering when the based vertex changes position This problem seems to have been solved before,in #63534 and #56408 **Exact steps for others to reproduce the error** Open the file and render animation
andy-joy added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-09-16 15:07:19 +02:00
Member

Can confirm, will check when this broke again

Can confirm, will check when this broke again
Philipp Oeser added
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-09-18 14:15:50 +02:00
Member

Caused by d20f992322

CC @HooglyBoogly

Caused by d20f9923224d2637374dd4390ae84c5041e3f9d3 CC @HooglyBoogly
Philipp Oeser added
Module
Modeling
Interest
Nodes & Physics
Priority
High
and removed
Priority
Normal
labels 2023-09-18 16:03:52 +02:00
Iliya Katushenock changed title from Child hair particles set to "Interpolated" causes jittering when the based vertex changes position to Regression: Child hair particles set to "Interpolated" causes jittering when the based vertex changes position 2023-09-18 16:39:57 +02:00
Member

Hmm, I don't really see the "jittering" in the file. Could you point out where the issue is?

Hmm, I don't really see the "jittering" in the file. Could you point out where the issue is?
Member

You have to render ctrl F12

You have to render ctrl F12
Member

I still don't see jittering in the rendered images.

I still don't see jittering in the rendered images.
Member

Is that cycles?

Is that cycles?
Member

That's EEVEE, was it meant to be rendered in Cycles?

That's EEVEE, was it meant to be rendered in Cycles?
Member

That's EEVEE, was it meant to be rendered in Cycles?

yes

> That's EEVEE, was it meant to be rendered in Cycles? yes

Any updates here?

Any updates here?

Rendering with Cycles, the file provided shows fairly obvious jittering, EEVEE works as noted.

Rendering with Cycles, the file provided shows fairly obvious jittering, EEVEE works as noted.
Member

I looked into this for a few hours today and a bit yesterday. I didn't make much progress. My guess is that somehow the fact that there is a mesh_final in cases where there wasn't before breaks some assumption in the particle system, and it generates the children on the final deformed positions rather than the original positions. But looking into that I didn't find evidence yet.

I looked into this for a few hours today and a bit yesterday. I didn't make much progress. My guess is that somehow the fact that there is a `mesh_final` in cases where there wasn't before breaks some assumption in the particle system, and it generates the children on the final deformed positions rather than the original positions. But looking into that I didn't find evidence yet.
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2023-10-13 20:34:15 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-10-13 20:38:48 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#112448
No description provided.